@@ -1,3 +1,15 @@
+2088-05-18  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* .bzrignore: Ignored some more files.
+	* src/Makefile.am:
+	* src/instructions.h:
+	* src/interface.c:
+	* src/main.c:
+	* src/main.h:
+	* src/parser.c:
+	* src/parser.h: Fixed build errors and warnings and the program
+	now compiles.
+
 2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/instructions.h:
